--- a/packages/blocky-example/components/documentations/documentation.scss
+++ b/packages/blocky-example/components/documentations/documentation.scss
@@ -96,7 +96,7 @@
 
     pre {
       width: 100%;
-      overflow-x: scroll;
+      overflow-x: auto;
     }
 
     img {
